--- a/exame/templates/menu.html
+++ b/exame/templates/menu.html
@@ -17,25 +17,19 @@
             <p>..:MENU:..</p>
         </div>
         <div class="card-group btn">
-            <button type="submit">PERFIL</button>
-        </div>
-
-        <div class="card-group btn">
-            <a href="{% url 'exame' %}">
-                <button type="button">SINTOMAS</button>
+            <a href="{% url 'perfil' %}">
+                <button type="button">PERFIL</button>
             </a>
         </div>
 
         <div class="card-group btn">
-            <button type="submit">HOSPITAIS</button>
+            <a href="{% url 'exame' %}">
+                <button type="button">EXAMES</button>
+            </a>
         </div>
         
         <div class="card-group btn">
-            <button type="submit">AJUDA</button>
-        </div>
-
-        <div class="card-group btn">
-            <a href="{% url 'login' %}">
+            <a href="{% url 'logout' %}">
                 <button type="button">SAIR</button>
             </a>
         </div>
